# homework

./: cpp3.cpp
HW1/: CMakeLists.txt  ReadME.md  package.xml
HW1/src/: hw1.cpp
Homework11-master/: README.md
Homework11-master/hw11/include/hw11/: kalman.h
Homework11-master/hw11/src/: kalman.cpp  kf_test.cpp  produce_data1.py
Homework2/: README.md
Homework2/HW2/: CMakeLists.txt  package.xml
Homework2/HW2/src/: hw2.cpp
Homework3-master/: README.md
Homework3-master/HW3/: CMakeLists.txt  package.xml
Homework3-master/HW3/src/: eigen_transform.cpp
Homework7/: README.md
Homework7/HW7/: CMakeLists.txt  package.xml
Homework7/HW7/src/: answer1.cpp  answer2.cpp
beginner_tutorials/: CMakeLists.txt  CMakeLists.txt.save  package.xml
beginner_tutorials/launch/: turtlemimic.launch
beginner_tutorials/src/: listener.cpp
homework6/: CMakeLists.txt  README.md  package.xml
homework6/src/: hw6.cpp
imu_integration/: CMakeLists.txt
imu_integration/include/imu_integration/: hw3_node.h
imu_integration/src/: hw3_node.cpp  hw3_node.h
imu_integration_exp/: CMakeLists.txt  package.xml
imu_integration_exp/src/: hw3_node.cpp
learning_tf2/launch/: start_demo.launch
learning_tf2/src/: frame_tf2_broadcaster.cpp  turtle_tf2_listener.cpp
midterm/: CMakeLists.txt
midterm/config/: rviz.rviz
midterm/include/midterm/: common.h.autosave  ncrl.cpp
midterm/launch/: launch.launch
midterm/src/: FtoFmanager.cpp  csv_test.cpp  ncrl.cpp  pcd_show.cpp  rt_check.cpp
midterm/src/test/: init_guess.cpp  map_cloud.cpp  map_clud.cpp  mid_term.cpp  pcd_show.cpp  qt_15.cpp  test.cpp
my_pcl_tutorial/: CMakeLists.txt  package.xml
my_pcl_tutorial/src/: example.cpp
pass_through/: CMakeLists.txt  package.xml
pass_through/src/: pass_through_new.cpp
test1/learning_tf2/: CMakeLists.txt  package.xml
test1/learning_tf2/src/: static_turtle_tf2_broadcaster.cpp
test2/learning_tf2/: CMakeLists.txt
test2/learning_tf2/launch/: start_demo.launch
test3/learning_tf2/: CMakeLists.txt
test3/learning_tf2/src/: turtle_tf2_broadcaster.cpp  turtle_tf2_listener.cpp
using_markers/: CMakeLists.txt  package.xml
using_markers/src/: basic_shapes.cpp  points_and_lines.cpp
wqerq/midterm/: CMakeLists.txt  package.xml
wqerq/midterm/include/midterm/: ncrl.h
wqerq/midterm/src/: pcd_show.cpp
wqerq/pcl/: CMakeLists.txt  package.xml
wqerq/pcl/src/: pcd_read.cpp
write_pcl/: CMakeLists.txt  package.xml
write_pcl/src/: write_pcl.cpp
